added the build target for Cruise Control
git-svn-id: https://svn.corp.versionone.net/svn/1/Trunk/V1Integration/Java/CruiseControl@18281 542498e7-56f8-f544-a0f2-a85913ac812a

--- a/build.xml
+++ b/build.xml
@@ -80,4 +80,6 @@
     </target>
 
     <target name="clean" depends="compile.clean,package.clean,zip.clean"/>
+
+    <target name="ccnet.build" depends="clean, package"/>
 </project>
