--- a/build.xml
+++ b/build.xml
@@ -16,6 +16,7 @@
     <property name="build.version" value="${ver.major}.${ver.minor}.${ver.build}"/>
     <property name="jar.filename" value="V1Publisher.jar"/>
     <property name="zip.filename" value="CruiseControlPublisher.${build.version}.zip"/>
+    <property name="coverage.file" value="cobertura.ser"/>
 
     <!-- Directories -->
     <property name="base.dir" value="."/>
@@ -24,6 +25,11 @@
     <property name="lib.dir" value="${basedir}/lib"/>
     <property name="distr.dir" value="${basedir}/distr"/>
     <property name="junit.output.dir" value="junit"/>
+    <property name="src.dir" value="${basedir}/src"/>
+    <property name="coverage.dir" value="coverage"/>
+    <property name="coverage.classes" value="${coverage.dir}/classes"/>
+    <property name="coverage.junit" value="${coverage.dir}/junit"/>
+
 
     <path id="classpath">
         <pathelement location="${lib.dir}/VersionOne.APIClient.jar"/>
@@ -33,7 +39,17 @@
         <pathelement location="${lib.dir}/jaxen-1.1-beta-8.jar"/>
         <pathelement location="${lib.dir}/VersionOne.ObjectModel.jar"/>
 	<pathelement location="${lib.dir}/junit-4.4.jar"/>
+	<pathelement location="${lib.dir}/cobertura.jar"/>
     </path>
+
+
+    <taskdef classpath="${lib.dir}/cobertura.jar" resource="tasks.properties">
+        <classpath>
+            <fileset dir="${lib.dir}">
+                <include name="**/*.jar"/>
+            </fileset>
+        </classpath>
+    </taskdef>
 
 
     <target name="compile.clean">
@@ -96,6 +112,7 @@
         <delete file="${zip.filename}"/>
 	<!--<delete dir="${publish.dir}"/>-->
 	<delete dir="${junit.output.dir}"/>
+	<delete dir="." includes="cobertura.ser"/>
     </target>
 
     <target name="zip.plugin" depends="zip.clean, package">
@@ -109,6 +126,56 @@
         <copy file="readme.txt" todir="${distr.dir}"/>
 
         <zip destfile="${publish.dir}/${zip.filename}" basedir="${distr.dir}"/>
+    </target>
+
+
+    <target name="coverage.init">
+        <mkdir dir="${coverage.classes}"/>
+        <mkdir dir="${coverage.junit}"/>
+    </target>
+
+    <target name="coverage.clean">
+        <delete dir="${coverage.dir}"/>
+        <delete file="${coverage.file}"/>
+    </target>
+
+    <target name="coverage" depends="compile, coverage.clean, coverage.init">
+        <cobertura-instrument todir="${coverage.classes}" datafile="${coverage.file}">
+            	    <fileset dir="${bin.product.dir}">
+			<include name="**/*.class"/>
+                	<exclude name="**/PublisherTester.class"/>
+			<exclude name="**/DOMtoJDOM.class"/>
+		    </fileset>
+        </cobertura-instrument>
+
+        <junit fork="yes" printsummary="withOutAndErr">
+            <sysproperty key="net.sourceforge.cobertura.datafile" file="${coverage.file}"/>
+            <!--<sysproperty key="test.websiteurl" value="${test.websiteurl}"/>-->
+
+            <classpath>
+	       <pathelement location="${coverage.classes}"/>
+	       <pathelement location="${bin.product.dir}"/>
+	       <path refid="classpath"/>
+            </classpath>
+            <formatter type="xml"/>
+
+
+            <batchtest fork="yes" todir="${junit.output.dir}">
+                <fileset dir="${bin.product.dir}">
+	            <include name="**/PublisherTester.class"/>
+                </fileset>
+            </batchtest>
+        </junit>
+
+        <cobertura-report datafile="${coverage.file}" destdir="${coverage.dir}/html">
+            <fileset dir="${src.dir}" includes="**/*"/>
+        </cobertura-report>
+        <cobertura-report datafile="${coverage.file}" format="xml" destdir="${coverage.dir}">
+            <fileset dir="${src.dir}" includes="**/*"/>
+        </cobertura-report>
+        <move file="${coverage.dir}/coverage.xml" tofile="${coverage.dir}/coverage.raw"/>
+        <xslt destdir="${coverage.dir}" style="${base.dir}/stripDTD.xsl" in="${coverage.dir}/coverage.raw"
+            out="${coverage.dir}/coverage.xml"/>
     </target>
 
 
