added coverage to build file
git-svn-id: https://svn.corp.versionone.net/svn/1/Trunk/V1Integration/Java/CruiseControl@18339 542498e7-56f8-f544-a0f2-a85913ac812a

--- a/build.xml
+++ b/build.xml
@@ -181,5 +181,5 @@
 
     <target name="clean" depends="compile.clean,package.clean,zip.clean"/>
 
-    <target name="ccnet.build" depends="clean, compile, plugin.test, zip.plugin"/>
+    <target name="ccnet.build" depends="clean, compile, coverage, zip.plugin"/>
 </project>
