TK-09770 - Use doc output dir and not source
git-svn-id: https://svn.corp.versionone.net/svn/1/Trunk/V1Integration/Java/CruiseControl@18841 542498e7-56f8-f544-a0f2-a85913ac812a

--- a/build.xml
+++ b/build.xml
@@ -127,7 +127,7 @@
         <copy file="readme.txt" todir="${distr.dir}"/>
 
 		<copy todir="${distr.dir}/doc" flatten="false">
-			<fileset dir="${doc.source.dir}">
+			<fileset dir="${doc.dir}">
 				<include name="**/*" />
 			</fileset>
 		</copy>
