--- a/build.xml
+++ b/build.xml
@@ -16,6 +16,7 @@
     <property name="build.version" value="${ver.major}.${ver.minor}.${ver.build}"/>
     <property name="jar.filename" value="V1Publisher.jar"/>
     <property name="zip.filename" value="CruiseControlPublisher.${build.version}.zip"/>
+    <property name="source.zip.filename" value="CruiseControlPublisher.Source.${build.version}.zip"/>
     <property name="coverage.file" value="cobertura.ser"/>
 
     <!-- Directories -->
@@ -88,7 +89,7 @@
             </manifest>
         </jar>
     </target>
-
+	
     <target name="plugin.test" depends="compile">
         <mkdir dir="${junit.output.dir}"/>
         <junit fork="yes" printsummary="withOutAndErr">
@@ -130,11 +131,22 @@
 				<include name="**/*" />
 			</fileset>
 		</copy>
-
 		
         <zip destfile="${publish.dir}/${zip.filename}" basedir="${distr.dir}"/>
+		
+		<zip destfile="${publish.dir}/${source.zip.filename}">
+			<fileset dir="${base.dir}">
+				<include name="build.xml"/>
+				<include name="testdata.xml"/>
+				<include name="stripDTD.xsl"/>
+				<include name="src/**/*"/>
+				<include name="test/**/*"/>
+				<include name="lib/**/*"/>
+				<include name="DocSource/**/*"/>
+			</fileset>
+		</zip>		
+		
     </target>
-
 
     <target name="coverage.init">
         <mkdir dir="${coverage.classes}"/>
