TK-10422 - source zip now includes tests directory
git-svn-id: https://svn.corp.versionone.net/svn/1/Trunk/V1Integration/Java/CruiseControl@20786 542498e7-56f8-f544-a0f2-a85913ac812a

--- a/build.xml
+++ b/build.xml
@@ -140,7 +140,7 @@
 				<include name="testdata.xml"/>
 				<include name="stripDTD.xsl"/>
 				<include name="src/**/*"/>
-				<include name="test/**/*"/>
+				<include name="tests/**/*"/>
 				<include name="lib/**/*"/>
 				<include name="DocSource/**/*"/>
 			</fileset>
