TK-10423 - Build now creates a source zip
git-svn-id: https://svn.corp.versionone.net/svn/1/Trunk/V1Integration/Java/CruiseControl@20787 542498e7-56f8-f544-a0f2-a85913ac812a

--- a/build.xml
+++ b/build.xml
@@ -111,6 +111,7 @@
     <target name="zip.clean">
         <delete dir="${distr.dir}"/>
         <delete file="${zip.filename}"/>
+        <delete file="${source.zip.filename}"/>
 	<!--<delete dir="${publish.dir}"/>-->
 	<delete dir="${junit.output.dir}"/>
 	<delete dir="." includes="cobertura.ser"/>
