TK-11933 - Include build information in Manifest
git-svn-id: https://svn.corp.versionone.net/svn/1/Trunk/V1Integration/Java/CruiseControl@25257 542498e7-56f8-f544-a0f2-a85913ac812a

--- a/build.xml
+++ b/build.xml
@@ -86,6 +86,8 @@
                 <attribute name="BuiltBy" value="VersionOne"/>
                 <attribute name="Main-Class"
                            value="com.versionone.cruisecontrol.publisher.VersionOnePublisher"/>
+                <attribute name="BuildVersion" value="${build.version}"/>
+                <attribute name="BuildRev" value="${ver.build}"/>
             </manifest>
         </jar>
     </target>
