cobertura upgrade to 1.9.4.1 and summary coverage report generation
git-svn-id: https://svn.corp.versionone.net/svn/1/Trunk/V1Integration/Java/CruiseControl@40171 542498e7-56f8-f544-a0f2-a85913ac812a

--- a/build.xml
+++ b/build.xml
@@ -77,7 +77,7 @@
     </target>
 
     <target name="package" depends="package.clean, compile"
-            description="creating jar parckage">
+            description="creating jar package">
         <jar jarfile="${build.dir}/${jar.filename}">
 
 	    <fileset dir="${bin.product.dir}"
@@ -199,6 +199,8 @@
         <move file="${coverage.dir}/coverage.xml" tofile="${coverage.dir}/coverage.raw"/>
         <xslt destdir="${coverage.dir}" style="${base.dir}/stripDTD.xsl" in="${coverage.dir}/coverage.raw"
             out="${coverage.dir}/coverage.xml"/>
+        <xslt destdir="${coverage.dir}" style="${base.dir}/cobertura.xsl" in="${coverage.dir}/coverage.raw"
+          out="${coverage.dir}/coverage-summary.html"/>
     </target>
 
 	<target name="gendoc.clean">
